--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-react-tailwind",
-  "private": true,
-  "version": "0.1.0",
+  "name": "vite-react-tailwind-starter",
+  "license": "MIT",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
